# ros2_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/husky_ur5/: CMakeLists.txt
src/husky_ur5/behavior_trees/: navigate_without_orientation.xml
src/husky_ur5/config/: control.yaml  ekf.yaml  husky_ur5_controllers.yaml  nav2_params.yaml
src/husky_ur5/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/husky_ur5/launch/: display_launch.py  husky_ur5_nav2_launch.py  nav2_almacen.launch.py  slam.launch.py
src/husky_ur5/launch/install/: local_setup.sh  setup.sh
src/husky_ur5/maps/: almacen_map.pgm  almacen_map.yaml
src/husky_ur5/models/caja_pick/: model.config  model.sdf
src/husky_ur5/src/: algrt_secuencial.cpp
src/husky_ur5/urdf/: husky_ur5_gazebo.urdf.xacro
src/husky_ur5/urdf/log/: latest_build
src/husky_ur5/worlds/: almacen.world  warehouse.world
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/move_ur5/: CMakeLists.txt
src/move_ur5/src/: move_ur5.cpp
src/robot_initial_pose/: package.xml  setup.cfg  setup.py
src/robot_navigation/: CMakeLists.txt  package.xml  setup.py
src/ur5_moveit_config/: CMakeLists.txt
src/ur5_moveit_config/config/: husky_ur5_gazebo.srdf  husky_ur5_gazebo.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/ur5_moveit_config/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  (+2 more)
videos/: README.md
(+1211 files in other folders)
